--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -13,6 +15,21 @@
     --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
+  }
+}
+
+@layer base {
+  html {
+      font-family: 'Poppins', sans-serif;
+  }
+
+  .container-snap::-webkit-scrollbar {
+      display: none;
+  }
+
+  .container-snap {
+      -ms-overflow-style: none;
+      scrollbar-width: none;
   }
 }
 
